--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.7",
     "ionicons": "^7.0.0",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-leaflet": "^4.2.1",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
     "react-slick": "^0.30.1",
